-Also theres a lot of new content in the mod so if you're already localizing the mod currently, you can use what you've done but you will need to put it in the correct localization file
-Hopefully the way I have organized things makes it easier for anyone trying to translate to mod, and feel free to let me know if you have questions or find any issues




~CHANGES TO EXISTING CONTENT~


Items:

-All spooky mod boss masks now drop from that bosses treasure bag in expert mode to be consistent with vanilla
-Buffed the use speed for the toilet paper and necromancy for dummies
-Buffed the creepy candle's magic damage bonus from 5% to 7%
-Increased the drop rate for the warlock's skull, warlock's cloak, and warlock's hood from zomboid warlocks
-Renamed the rotten chunk to moldy chunk, because rotten chunks are already an item in terraria
-Fixed moldy chunks stacking to 999 and not 9999
-Rotten gourd armor now requires old wood to craft along with the moldy chunks, and buffed the amount of defense each piece of the armor gives
-Increased harvester's scythe knockback quite a bit
-The harvester's scythe now spawns souls when you hit enemies instead of needing to kill them, and you now need 10 souls in order for them to attack enemies
-Changed the sound effect for the skull smasher when it is ready to throw
-Increased all orro & boro weapon sell prices because they were far too low
-Renamed the acid blaster to venom gasser, nerfed its base damage from 50 to 30, now inflicts venom, pierces enemies, can no longer go through blocks, and has a cool new visual effect
-Nerfed gargoyle scepter base damage from 65 to 42, and the cursed fire balls shot by grug now inflict cursed flames
-The ichor clouds shot by the tongueblade now inflict ichor for a short time, have a cooler visual effect, can no longer go through blocks, and play a less annoying sound when shot