@@ -1,25 +1,0 @@
-updated and more simple todo list:
-
-The following have sprites, but need to be programmed:
-
--finish daffodil's boss fight
-
--finish blood moon fishing eye valley enemies
-
--Add tacos catacomb enemies
-
--Add new mushroom enemies
-
-
-The following needs both sprites and programming:
-
--add new enemies for the swampy cemetery
-
--add new enemies for the ambush rooms in both layer 1 and 2 of the catacombs
-
--add new boss icons for rot gourd and daffodil
-
--add daffodil's item drops, weapons, relic, mask, trophy, ect
-
--add new catacomb weapons for magic and summon for the second layer
-
